<resources>
    <string name="app_name">MobileAppDev</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start">StartActivity</string>

    // LogIn
    <string name="edit_txt_username_hint">"Tên đăng nhập"</string>
    <string name="edit_txt_password_hint">"Mật khẩu</string>
    <string name="edit_txt_re_password_hint">Nhập lại mật khẩu</string>
    <string name="edit_txt_email_hint">Email</string>
    <string name="edit_txt_phone_number_hint">Số điện thoại</string>
    <string name="edit_txt_address_hint">Địa chỉ</string>
    <string name="btn_forgot_password_hint">"Quên mật khẩu"</string>
    <string name="btn_login_hint">Đăng nhập</string>
    <string name="btn_facebook_login_hint">"Đăng nhập bằng Facebook"</string>
    <string name="btn_register_hint">"Đăng ký"</string>
    <string name="btn_recover_password_hint">Phục hồi mật khẩu</string>

    // Navigation Drawer Menu Items
    <string-array name="navigation_drawer_item_title_array">
        <item>Trang chính</item>
        <item>Cá nhân</item>
        <item>Bạn bè</item>
        <item>Bookmark</item>
        <item>Hỗ trợ</item>
        <item>Cài đặt</item>
        <item>Đăng xuất</item>
    </string-array>

    // Navigation Drawer Menu Icons
    <string-array name="navigation_drawer_item_icon_array">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_home</item>
    </string-array>

    // Navigation Drawer Title
    <string name="navigation_drawer_open">"Open"</string>
    <string name="navigation_drawer_close">"Close"</string>

    // Personal Information
    <string name="header_name">Dinh Nguyen</string>
    <string name="header_mail">nhudinh2103@gmail.com</string>

    // Main Tabs
    <string-array name="tab_main_fragment">
        <item>"Bản đồ"</item>
        <item>"Danh sách</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">Map</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
