<LinearLayout android:id="@+id/logInMainLayout"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".features.start.SignIn.SignInFragment">

    <EditText
        android:id="@+id/editTxtUsername_SignInFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:hint="@string/edit_txt_username_hint"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/editTxtPassword_SignInFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:hint="@string/edit_txt_password_hint"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btnForgotPassword_SignInFragment"
        style="?attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:hint="@string/btn_forgot_password_hint"/>

    <Button
        android:id="@+id/btnSignIn_SignInFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/btn_login_hint"/>

    <Button
        android:id="@+id/btnLogInWithFacebook_SignInFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/btn_facebook_login_hint"/>


    <Button
        android:id="@+id/btnSignUp_SignInFragment"
        style="?attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/btn_register_hint"/>

</LinearLayout>
