<LinearLayout android:id="@+id/signUpLinearLayout_SignUpFragment"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:divider="@drawable/empty_tall_divider"
              android:orientation="vertical"
              android:showDividers="middle"
              tools:context=".view.features.start.SignUp.SignUpFragment">

    <EditText
        android:id="@+id/editTxtUsername_SignUpFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/normal_edit_text"
        android:gravity="left"
        android:hint="@string/edit_txt_username_hint"
        android:inputType="textPersonName"
        android:textColorHint="@drawable/text_hint_selector"/>

    <EditText
        android:id="@+id/editTxtPassword_SignUpFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/normal_edit_text"
        android:gravity="left"
        android:hint="@string/edit_txt_password_hint"
        android:inputType="textPassword"
        android:textColorHint="@drawable/text_hint_selector"/>

    <EditText
        android:id="@+id/editTxtRePassword_SignUpFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/normal_edit_text"
        android:gravity="left"
        android:hint="@string/edit_txt_re_password_hint"
        android:inputType="textPassword"
        android:textColorHint="@drawable/text_hint_selector"/>

    <EditText
        android:id="@+id/editTxtEmail_SignUpFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/normal_edit_text"
        android:gravity="left"
        android:hint="@string/edit_txt_email_hint"
        android:inputType="textEmailAddress"
        android:textColorHint="@drawable/text_hint_selector"/>

    <EditText
        android:id="@+id/editTxtPhoneNumber_SignUpFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/normal_edit_text"
        android:gravity="left"
        android:hint="@string/edit_txt_phone_number_hint"
        android:inputType="number"
        android:maxLength="12"
        android:textColorHint="@drawable/text_hint_selector"/>

    <EditText
        android:id="@+id/editTxtAddress_SignUpFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/normal_edit_text"
        android:gravity="left"
        android:hint="@string/edit_txt_address_hint"
        android:minHeight="60dp"
        android:textColorHint="@drawable/text_hint_selector"/>

    <Button
        android:id="@+id/btnSignUp_SignUpFragment"
        style="?attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/btn_register_hint"/>


</LinearLayout>
